# mpipe

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  pyproject.toml
.github/workflows/: ci.yml
assets/prompts/toolcalling/tour1/: postprompt  preprompt  prompt
assets/prompts/toolcalling/tour2/: postprompt  prompt  system
mpipe/: __init__.py  __main__.py  config.py  console.py  logging.py  main.py
mpipe/commands/: __init__.py  _helpers.py  _prompts.py  agent.py  ask.py  chat.py  chroma.py  completion.py  config.py  download.py  embed.py  grep.py  index.py  list.py  models.py  prompt.py  prompting.py  tools.py
mpipe/rchain/: __init__.py  ai.py  chat_models.py  chat_runtime.py  embeddings.py  fireworks.py  human.py  openai.py  provider.py  tools.py
mpipe/utils/: __init__.py  config.py
scripts/: send_request.py
src/: config.rs  lib.rs  main.rs
src/commands/: agent.rs  ask.rs  chroma.rs  config.rs  download.rs  embed.rs  grep.rs  index.rs  list.rs  mod.rs  models.rs  prompt.rs  prompting.rs  tools.rs
src/rchain/: ai.rs  chat_models.rs  chat_runtime.rs  embeddings.rs  fireworks.rs  human.rs  mod.rs  openai.rs  provider.rs  tools.rs
tests/: mpask_cli.rs
