[package]
name = "mpipe"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "time"] }
base64 = "0.22"
image = "0.24"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
